dataset1235/2025-2/805158916/users/3563627350/executions/2651470117_3691284457.log
== SUBMISSION (2025-08-25 14:57:00)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())
soma_pesos = 1 + 2 + 3 + 4
media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_peso
print(ruond(media_ponderada, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_peso
                                                                                 ^^^^^^^^^
NameError: name 'soma_peso' is not defined. Did you mean: 'soma_pesos'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_peso
                                                                                 ^^^^^^^^^
NameError: name 'soma_peso' is not defined. Did you mean: 'soma_pesos'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_peso
                                                                                 ^^^^^^^^^
NameError: name 'soma_peso' is not defined. Did you mean: 'soma_pesos'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_peso
                                                                                 ^^^^^^^^^
NameError: name 'soma_peso' is not defined. Did you mean: 'soma_pesos'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_peso
                                                                                 ^^^^^^^^^
NameError: name 'soma_peso' is not defined. Did you mean: 'soma_pesos'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_peso
                                                                                 ^^^^^^^^^
NameError: name 'soma_peso' is not defined. Did you mean: 'soma_pesos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:58:17)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())
soma_pesos = 1 + 2 + 3 + 4
media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_pesos
print(round(media_ponderada, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:55:06)
-- CODE: 
nota1 = float(input())
nota2 = float(inout())
nota3 = float(inout())
nota4 = float(input())
some_pesos = 1 + 2 + 3 + 4
media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_pesos
print(ruond(media_ponderada, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:55:19)
-- CODE: 
nota1 = float(input())
nota2 = float(inout())
nota3 = float(inout())
nota4 = float(input())
soma_pesos = 1 + 2 + 3 + 4
media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_pesos
print(ruond(media_ponderada, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = float(inout())
                  ^^^^^
NameError: name 'inout' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:55:57)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())
soma_pesos = 1 + 2 + 3 + 4
media_ponderada = ((nota1 * 1 ) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)) / soma_pesos
print(ruond(media_ponderada, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(ruond(media_ponderada, 2))
          ^^^^^
NameError: name 'ruond' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(ruond(media_ponderada, 2))
          ^^^^^
NameError: name 'ruond' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(ruond(media_ponderada, 2))
          ^^^^^
NameError: name 'ruond' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(ruond(media_ponderada, 2))
          ^^^^^
NameError: name 'ruond' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(ruond(media_ponderada, 2))
          ^^^^^
NameError: name 'ruond' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(ruond(media_ponderada, 2))
          ^^^^^
NameError: name 'ruond' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
